# sovereign-core

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
contentaios/: __init__.py  dgm.py  kernel.py  sensory.py  types.py
deploy/: ci-workflow.yml  prometheus.yml  sovereign-ci.yml
docs/: COMMUNITY_GROWTH.md  KAIROS-architecture.md  KAN-122-zero-committee.md  KAN-123-arso-v2-roadmap.md  KAN-87-contentaios.md  NICHE_TRAINING_REPORT.md  PROOF_OF_WORK.md  RES-05-nemotron-primary-brain.md  RES-09-recursive-civilization-framework.md  RES-10-wedlm-diffusion-lm.md  RES-10-wedlm-research-path.md  RES-11-cross-environment-skill-transfer.md  aegis-vault-runbook.md
feynman/: clara_reasoning.py
gateway/: __init__.py  auction.py  auth.py  benchmark.py  config.py  context.py  dashboard.html  db.py  dgm_h_archive.py  diffusion_router.py  health.py  inference.py  iron_dome_middleware.py  kairos.py  kairos_ext.py  kairos_routes.py  ledger.py  main.py  mcp_auction_interface.py  mem_evolve.py  metrics.py  models.py  pattern_memory.py  router.py  sage_context.py  self_verification.py  status.py  v1_compat.py  ws.py
hyperagents/: sage_generate_loop.py
kairos/: __init__.py  encompass_backtrack.py  federated_node_context.py  group_evolution.py
memory_palace/: ghost_recall.py  iron_dome.py
nemotron/: __init__.py  ab_router.py  benchmark.py  reasoning_parser.py  serve_config.py
scripts/: nightly_full_evolution.py  ollama_start_all.sh  pull_models.sh  smoke_test.sh  (+5 more)
(+49 files in other folders)
