[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-core-gateway"
version = "0.1.0"
description = "Heterogeneous Compute Gateway — tri-GPU inference mesh orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiohttp>=3.9.5",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[project.scripts]
sovereign-gateway = "gateway.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*", "contentaios*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
